heatwave-cloud-analytics/zeppelin/files/zeppelin-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zeppelin-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/app-root: /zeppelin/
spec:
  rules:
  - host: zeppelin
  - http:
      paths:
        - path: /zeppelin(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: zeppelin-server
              port:
                number: 8080
